upd: styles and layout

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
             </div>
         </header>
+    </div> 
+       
         <main class="main">
             <section class="section-steps">
                 <h2>3 steps to the perfect trip</h2>
@@ -84,7 +86,9 @@
                             <div class="slide-place">USA</div>
                         </div>
                     </div>
+                    <div class="bulltes">
 
+                    </div>
                     <div class="fade-left"></div>
                     <div class="fade-right"></div>
                 </div>
@@ -94,10 +98,11 @@
                 <h2>Travel stories</h2>
             </section>
         </main>
+
         <footer class="footer">
 
         </footer>
-    </div>
+    
 
 </body>
 
