upd: layout and styles

--- a/index.html
+++ b/index.html
@@ -85,17 +85,55 @@
                             <img class="slide-photo" src="./images/slide-usa.jpg" alt="" srcset="">
                             <div class="slide-place">USA</div>
                         </div>
-                    </div>
-                    <div class="bulltes">
-
-                    </div>
+                    </div>                    
                     <div class="fade-left"></div>
                     <div class="fade-right"></div>
+                    <div class="bullets">
+                        <div class="bullet"></div>
+                        <div class="bullet bullet-current"></div>
+                        <div class="bullet"></div>
+                    </div>
+                    <div class="slider-button">
+                        <button>
+                            <img src="./images/icon-arrow-right.svg" alt="" srcset="">
+                            <span>Find More</span>
+                        </button>
+                    </div>
                 </div>
 
             </section>
             <section class="section-stories">
                 <h2>Travel stories</h2>
+                <div class="stories-wrapper">
+                    <div class="story">
+                        <div class="story-photo"></div>
+                        <div class="story-content">
+                            <div class="story-name"></div>
+                            <div class="story-description"></div>
+                        </div>
+                    </div>
+                    <div class="story">
+                        <div class="story-photo"></div>
+                        <div class="story-content">
+                            <div class="story-name"></div>
+                            <div class="story-description"></div>
+                        </div>
+                    </div>
+                    <div class="story">
+                        <div class="story-photo"></div>
+                        <div class="story-content">
+                            <div class="story-name"></div>
+                            <div class="story-description"></div>
+                        </div>
+                    </div>
+                    <div class="story">
+                        <div class="story-photo"></div>
+                        <div class="story-content">
+                            <div class="story-name"></div>
+                            <div class="story-description"></div>
+                        </div>
+                    </div>
+                </div>
             </section>
         </main>
 
