upd: images, styles, layout

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
@@ -21,8 +21,8 @@
             <nav class="nav">
                 <div class="logo-block">
                     <a href="javascript:void(0);">
-                        <div class="logo-square"><img src="./images/logo-square.svg"></div>
-                        <div class="logo-name"><img src="./images/logo-name.svg"></div>
+                        <div class="logo-square"><img src="./images/logo-square.svg" alt=""></div>
+                        <div class="logo-name"><img src="./images/logo-name.svg" alt=""></div>
                     </a>
                 </div>
                 <div class="menu-block">
@@ -40,7 +40,12 @@
         </div>
         <header class="header">
             <div class="header-container">
-
+                <div class="header-block">
+                    <h1 class="header-title"></h1>
+                    <div class="search-panel">
+                        <input type="text"></div>
+                        <button>dfdf</button>
+                </div>
             </div>
         </header>
     </div> 
@@ -74,15 +79,15 @@
                 <div class="slider-wrapper">
                     <div class="slider">
                         <div class="slide photo-1">
-                            <img class="slide-photo" src="./images/slide-new-zeland.jpg" alt="" srcset="">
+                            <img class="slide-photo" src="./images/slide-new-zeland.jpg" alt="">
                             <div class="slide-place">New Zeland</div>
                         </div>
                         <div class="slide photo-2">
-                            <img class="slide-photo" src="./images/slide-japan.jpg" alt="" srcset="">
+                            <img class="slide-photo" src="./images/slide-japan.jpg" alt="">
                             <div class="slide-place">Japan</div>
                         </div>
                         <div class="slide photo-3">
-                            <img class="slide-photo" src="./images/slide-usa.jpg" alt="" srcset="">
+                            <img class="slide-photo" src="./images/slide-usa.jpg" alt="">
                             <div class="slide-place">USA</div>
                         </div>
                     </div>                    
@@ -95,7 +100,7 @@
                     </div>
                     <div class="slider-button">
                         <button>
-                            <img src="./images/icon-arrow-right.svg" alt="" srcset="">
+                            <img src="./images/icon-arrow-right.svg" alt="">
                             <span>Find More</span>
                         </button>
                     </div>
@@ -105,34 +110,49 @@
             <section class="section-stories">
                 <h2>Travel stories</h2>
                 <div class="stories-wrapper">
-                    <div class="story">
-                        <div class="story-photo"></div>
-                        <div class="story-content">
-                            <div class="story-name"></div>
-                            <div class="story-description"></div>
+                    <div class="stories-container">
+                        <div class="story">
+                            <div class="story-photo">
+                                <img src="./images/story-1.jpg" alt="">
+                            </div>
+                            <div class="story-content">
+                                <h3 class="story-name">10 Photos of Attractive Thailand</h3>
+                                <div class="story-description"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                <p class=""><a href="javascript:void(0);">Read More</a></p></div>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="story-photo">
+                                <img src="./images/story-2.jpg" alt="">
+                            </div>
+                            <div class="story-content">
+                                <h3 class="story-name">Canyonlands National Park, Utah</h3>
+                                <div class="story-description"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <p class=""><a href="javascript:void(0);">Read More</a></p></div>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="story-photo">
+                                <img src="./images/story-3.jpg" alt="">
+                            </div>
+                            <div class="story-content">
+                                <h3 class="story-name">I left my heart in the Mountains!</h3>
+                                <div class="story-description"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <p class=""><a href="javascript:void(0);">Read More</a></p></div>
+                            </div>
+                        </div>
+                        <div class="story">
+                            <div class="story-photo">
+                                <img src="./images/story-4.jpg" alt="">
+                            </div>
+                            <div class="story-content">
+                                <h3 class="story-name">The Longest journey in my life!</h3>
+                                <div class="story-description"><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                    <p class=""><a href="javascript:void(0);">Read More</a></p></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="story">
-                        <div class="story-photo"></div>
-                        <div class="story-content">
-                            <div class="story-name"></div>
-                            <div class="story-description"></div>
-                        </div>
-                    </div>
-                    <div class="story">
-                        <div class="story-photo"></div>
-                        <div class="story-content">
-                            <div class="story-name"></div>
-                            <div class="story-description"></div>
-                        </div>
-                    </div>
-                    <div class="story">
-                        <div class="story-photo"></div>
-                        <div class="story-content">
-                            <div class="story-name"></div>
-                            <div class="story-description"></div>
-                        </div>
-                    </div>
+
                 </div>
             </section>
         </main>
