--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@400;500&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -27,10 +25,10 @@
                 </div>
                 <div class="menu-block">
                     <ul class="menu-list">
-                        <li class="menu-item"><a href="#">How It Works</a></li>
-                        <li class="menu-item"><a href="#">Plan Your Trip</a></li>
-                        <li class="menu-item"><a href="#">Destinations</a></li>
-                        <li class="menu-item"><a href="#">Travel Stories</a></li>
+                        <li class="menu-item"><a href="#how-it-works">How It Works</a></li>
+                        <li class="menu-item"><a href="#plan-your-trip">Plan Your Trip</a></li>
+                        <li class="menu-item"><a href="#destinations">Destinations</a></li>
+                        <li class="menu-item"><a href="#travel-stories">Travel Stories</a></li>
                     </ul>
                 </div>
                 <div class="login-block">
@@ -41,17 +39,19 @@
         <header class="header">
             <div class="header-container">
                 <div class="header-block">
-                    <h1 class="header-title"></h1>
-                    <div class="search-panel">
-                        <input type="text"></div>
-                        <button>dfdf</button>
+                    <h1 id="how-it-works" class="header-title">Explore the beauty of the World</h1>
+                    <div class="header-subtitle">Receive personalized recommendations for countries, hotels, activities and more</div>
+                    <div class="search-block">
+                        <input class="search-line" type="text" placeholder="What would you like to do?">
+                        <button class="search-button">Start Planning</button>
+                    </div>
                 </div>
             </div>
         </header>
     </div> 
        
         <main class="main">
-            <section class="section-steps">
+            <section class="section-steps" id="plan-your-trip">
                 <h2>3 steps to the perfect trip</h2>
                 <div class="steps-icons">
                     <div class="step">
@@ -74,7 +74,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section-popular">
+            <section class="section-popular" id="destinations">
                 <h2>Popular destinations</h2>
                 <div class="slider-wrapper">
                     <div class="slider">
