upd: styles and layout

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
 
             </section>
-            <section class="section-stories">
+            <section class="section-stories" id="travel-stories">
                 <h2>Travel stories</h2>
                 <div class="stories-wrapper">
                     <div class="stories-container">
@@ -151,15 +151,23 @@
                                     <p class=""><a href="javascript:void(0);">Read More</a></p></div>
                             </div>
                         </div>
+                        <div class="stories-button">
+                            <button>
+                                <img src="./images/icon-arrow-right.svg" alt="">
+                                <span>See More</span>
+                            </button>
+                        </div>
                     </div>
-
+                    <footer class="footer">
+                        <div class="github"> </div>
+                        <div class="copyright">All Rights Reserved © Travel Portal</div>
+                        <div class="socials"> </div>
+                    </footer>
                 </div>
             </section>
         </main>
 
-        <footer class="footer">
-
-        </footer>
+        
     
 
 </body>
