upd: styles and layout

--- a/index.html
+++ b/index.html
@@ -161,7 +161,17 @@
                     <footer class="footer">
                         <div class="github"> </div>
                         <div class="copyright">All Rights Reserved © Travel Portal</div>
-                        <div class="socials"> </div>
+                        <div class="socials">
+                            <a href="javascript:void(0);">
+                                <img src="./images/icon-instagram.svg" alt="Instagram">
+                            </a>
+                            <a href="javascript:void(0);">
+                                <img src="./images/icon-youtube.svg" alt="YouTube">
+                            </a>
+                            <a href="javascript:void(0);">
+                                <img src="./images/icon-twitter.svg" alt="Twitter">
+                            </a>
+                        </div>
                     </footer>
                 </div>
             </section>
