upd: styles, imgages and layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,400;0,700;1,400;1,700&family=Red+Hat+Text:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
 </head>
 
 <body>
@@ -19,8 +23,8 @@
             <nav class="nav">
                 <div class="logo-block">
                     <a href="javascript:void(0);">
-                        <div class="logo-square"><img src="./images/logo-square.svg" alt=""></div>
-                        <div class="logo-name"><img src="./images/logo-name.svg" alt=""></div>
+                        <div class="logo-square"><img src="./images/logo-square.svg" alt="Logo"></div>
+                        <div class="logo-name"><img src="./images/logo-name.svg" alt="Travel Portal"></div>
                     </a>
                 </div>
                 <div class="menu-block">
@@ -38,56 +42,56 @@
         </div>
         <header class="header">
             <div class="header-container">
-                <div class="header-block">
+                <section class="preview">
                     <h1 id="how-it-works" class="header-title">Explore the beauty of the World</h1>
                     <div class="header-subtitle">Receive personalized recommendations for countries, hotels, activities and more</div>
                     <div class="search-block">
                         <input class="search-line" type="text" placeholder="What would you like to do?">
                         <button class="search-button">Start Planning</button>
                     </div>
-                </div>
+                </section>
             </div>
         </header>
     </div> 
        
         <main class="main">
-            <section class="section-steps" id="plan-your-trip">
+            <section class="steps" id="plan-your-trip">
                 <h2>3 steps to the perfect trip</h2>
                 <div class="steps-icons">
                     <div class="step">
                         <div class="step-icon step-1">
-                            <img src="./images/icon-bike.svg" alt="">
+                            <img src="./images/icon-bike.svg" alt="icon">
                         </div>
                         <div class="step-text">Tell us what you want to do</div>
                     </div>
                     <div class="step">
                         <div class="step-icon step-2">
-                            <img src="./images/icon-calc.svg" alt="">
+                            <img src="./images/icon-calc.svg" alt="icon">
                         </div>
                         <div class="step-text">Share us preferable dates </div>
                     </div>
                     <div class="step">
                         <div class="step-icon step-3">
-                            <img src="./images/icon-jet.svg" alt="">
+                            <img src="./images/icon-jet.svg" alt="icon">
                         </div>
                         <div class="step-text">We will give you recommendations</div>
                     </div>
                 </div>
             </section>
-            <section class="section-popular" id="destinations">
+            <section class="destinations" id="destinations">
                 <h2>Popular destinations</h2>
                 <div class="slider-wrapper">
                     <div class="slider">
                         <div class="slide photo-1">
-                            <img class="slide-photo" src="./images/slide-new-zeland.jpg" alt="">
+                            <img class="slide-photo" src="./images/slide-new-zeland.jpg" alt="New Zeland">
                             <div class="slide-place">New Zeland</div>
                         </div>
                         <div class="slide photo-2">
-                            <img class="slide-photo" src="./images/slide-japan.jpg" alt="">
+                            <img class="slide-photo" src="./images/slide-japan.jpg" alt="Japan">
                             <div class="slide-place">Japan</div>
                         </div>
                         <div class="slide photo-3">
-                            <img class="slide-photo" src="./images/slide-usa.jpg" alt="">
+                            <img class="slide-photo" src="./images/slide-usa.jpg" alt="USA">
                             <div class="slide-place">USA</div>
                         </div>
                     </div>                    
@@ -100,20 +104,20 @@
                     </div>
                     <div class="slider-button">
                         <button>
-                            <img src="./images/icon-arrow-right.svg" alt="">
+                            <img src="./images/icon-arrow-right.svg" alt="icon">
                             <span>Find More</span>
                         </button>
                     </div>
                 </div>
 
             </section>
-            <section class="section-stories" id="travel-stories">
+            <section class="stories" id="travel-stories">
                 <h2>Travel stories</h2>
                 <div class="stories-wrapper">
                     <div class="stories-container">
                         <div class="story">
                             <div class="story-photo">
-                                <img src="./images/story-1.jpg" alt="">
+                                <img src="./images/story-1.jpg" alt="Story">
                             </div>
                             <div class="story-content">
                                 <h3 class="story-name">10 Photos of Attractive Thailand</h3>
@@ -123,7 +127,7 @@
                         </div>
                         <div class="story">
                             <div class="story-photo">
-                                <img src="./images/story-2.jpg" alt="">
+                                <img src="./images/story-2.jpg" alt="Story">
                             </div>
                             <div class="story-content">
                                 <h3 class="story-name">Canyonlands National Park, Utah</h3>
@@ -133,7 +137,7 @@
                         </div>
                         <div class="story">
                             <div class="story-photo">
-                                <img src="./images/story-3.jpg" alt="">
+                                <img src="./images/story-3.jpg" alt="Story">
                             </div>
                             <div class="story-content">
                                 <h3 class="story-name">I left my heart in the Mountains!</h3>
@@ -143,7 +147,7 @@
                         </div>
                         <div class="story">
                             <div class="story-photo">
-                                <img src="./images/story-4.jpg" alt="">
+                                <img src="./images/story-4.jpg" alt="Story">
                             </div>
                             <div class="story-content">
                                 <h3 class="story-name">The Longest journey in my life!</h3>
@@ -153,25 +157,32 @@
                         </div>
                         <div class="stories-button">
                             <button>
-                                <img src="./images/icon-arrow-right.svg" alt="">
+                                <img src="./images/icon-arrow-right.svg" alt="icon">
                                 <span>See More</span>
                             </button>
                         </div>
                     </div>
                     <footer class="footer">
-                        <div class="github"> </div>
+                        <ul class="links">
+                            <li><a href="https://github.com/questrator" target="_blank">
+                                <img src="./images/icon-github.svg" height="36" alt="GitHub">
+                            </a></li>
+                            <li><a href="https://rs.school/js-stage0/" target="_blank">
+                                <img src="./images/rs_school_js.svg" height="36" alt="RS-School">
+                            </a></li>
+                        </ul>                        
                         <div class="copyright">All Rights Reserved © Travel Portal</div>
-                        <div class="socials">
-                            <a href="javascript:void(0);">
+                        <ul class="socials">
+                            <li><a href="javascript:void(0);">
                                 <img src="./images/icon-instagram.svg" alt="Instagram">
-                            </a>
-                            <a href="javascript:void(0);">
+                            </a></li>
+                            <li><a href="javascript:void(0);">
                                 <img src="./images/icon-youtube.svg" alt="YouTube">
-                            </a>
-                            <a href="javascript:void(0);">
+                            </a></li>
+                            <li><a href="javascript:void(0);">
                                 <img src="./images/icon-twitter.svg" alt="Twitter">
-                            </a>
-                        </div>
+                            </a></li>
+                        </ul>
                     </footer>
                 </div>
             </section>
