--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <div class="header-wrapper">
+    <!-- <div class="header-wrapper">
         <div class="nav-wrapper">
             <nav class="nav">
                 <div class="logo-block">
@@ -55,7 +55,7 @@
                 </section>
             </div>
         </header>
-    </div>
+    </div> -->
 
     <main class="main">
         <section class="steps" id="plan-your-trip">
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </section>
-        <section class="destinations" id="destinations">
+        <!-- <section class="destinations" id="destinations">
             <h2>Popular destinations</h2>
             <div class="slider-wrapper">
                 <div class="slider">
@@ -220,7 +220,7 @@
                     </ul>
                 </footer>
             </div>
-        </section>
+        </section> -->
     </main>
     <script src="./js/index.js"></script>
 </body>
