--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
             </div>
 
-        </section>
+        </section> -->
         <section class="stories" id="travel-stories">
             <h2>Travel stories</h2>
             <div class="stories-wrapper">
@@ -197,7 +197,7 @@
                         </button>
                     </div>
                 </div>
-                <footer class="footer">
+                <!-- <footer class="footer">
                     <ul class="links">
                         <li><a href="https://github.com/questrator" target="_blank">
                                 <img src="./images/icon-github.svg" height="36" alt="GitHub">
@@ -218,9 +218,9 @@
                                 <img src="./images/icon-twitter.svg" alt="Twitter">
                             </a></li>
                     </ul>
-                </footer>
+                </footer> -->
             </div>
-        </section> -->
+        </section>
     </main>
     <script src="./js/index.js"></script>
 </body>
