--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 </head>
 
 <body>
-    <!-- <div class="header-wrapper">
-        <div class="nav-wrapper">
+    <div class="header-wrapper">
+        <!-- <div class="nav-wrapper">
             <nav class="nav">
+                
                 <div class="logo-block">
                     <a href="javascript:void(0);">
                         <div class="logo-square"><img src="./images/logo-square.svg" alt="Logo"></div>
@@ -41,7 +42,7 @@
                     <button class="login-button">Login</button>
                 </div>
             </nav>
-        </div>
+        </div> -->
         <header class="header">
             <div class="header-container">
                 <section class="preview">
@@ -55,7 +56,7 @@
                 </section>
             </div>
         </header>
-    </div> -->
+    </div>
 
     <main class="main">
         <section class="steps" id="plan-your-trip">
@@ -120,7 +121,7 @@
                 <div class="stories-container">
                     <div class="story">
                         <div class="story-photo">
-                            <img src="./images/story-1.jpg" alt="Story">
+                            <img src="./images/story-1.jpg" alt="Story" sizes="" srcset="./images/story-1-sm.jpg">
                         </div>
                         <div class="story-content">
                             <h3 class="story-name">10 Photos of Attractive Thailand</h3>
@@ -138,7 +139,7 @@
                     </div>
                     <div class="story">
                         <div class="story-photo">
-                            <img src="./images/story-2.jpg" alt="Story">
+                            <img src="./images/story-2.jpg" alt="Story" srcset="./images/story-2-sm.jpg">
                         </div>
                         <div class="story-content">
                             <h3 class="story-name">Canyonlands National Park, Utah</h3>
@@ -156,7 +157,7 @@
                     </div>
                     <div class="story">
                         <div class="story-photo">
-                            <img src="./images/story-3.jpg" alt="Story">
+                            <img src="./images/story-3.jpg" alt="Story" srcset="./images/story-3-sm.jpg">
                         </div>
                         <div class="story-content">
                             <h3 class="story-name">I left my heart in the Mountains!</h3>
@@ -174,7 +175,7 @@
                     </div>
                     <div class="story">
                         <div class="story-photo">
-                            <img src="./images/story-4.jpg" alt="Story">
+                            <img src="./images/story-4.jpg" alt="Story" srcset="./images/story-4-sm.jpg">
                         </div>
                         <div class="story-content">
                             <h3 class="story-name">The Longest journey in my life!</h3>
