--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
 <body>
     <div class="header-wrapper">
-        <!-- <div class="nav-wrapper">
-            <nav class="nav">
-                
+        <div class="nav-wrapper">
+            <nav class="nav">                
                 <div class="logo-block">
                     <a href="javascript:void(0);">
                         <div class="logo-square"><img src="./images/logo-square.svg" alt="Logo"></div>
@@ -41,8 +40,15 @@
                 <div class="login-block">
                     <button class="login-button">Login</button>
                 </div>
+            </nav>            
+        </div>
+        <div class="nav-mobile-wrapper">
+            <nav class="nav-mobile">
+                <div class="logo-mobile"></div>
+                <div class="menu-burger"></div>
             </nav>
-        </div> -->
+        </div>
+        
         <header class="header">
             <div class="header-container">
                 <section class="preview">
