upd: burger menu behaviour

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 </head>
 
 <body>
+    
+    <div class="menu-burger-bg"></div>
     <div class="header-wrapper">
         <div class="nav-wrapper">
             <nav class="nav">                
